# rye-workspace-test

./: README.md  pyproject.toml
monosay/: Cargo.toml  README.md  pyproject.toml
monosay-hi/: Cargo.toml  README.md  pyproject.toml
monosay-hi/python/monosay_hi/: __init__.py
monosay-hi/src/: lib.rs
monosay/python/monosay/: __init__.py
monosay/src/: lib.rs
monosay/tests/: test_hellow.py
